--- a/UI/index.html
+++ b/UI/index.html
@@ -19,13 +19,13 @@
                      <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
 
@@ -38,13 +38,13 @@
                      <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -56,13 +56,13 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags </p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -74,13 +74,13 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -92,13 +92,13 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -110,13 +110,13 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags </p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -128,13 +128,13 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags </p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -146,13 +146,13 @@
                      <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags </p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -164,13 +164,13 @@
                      <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
                    <div>
@@ -182,24 +182,25 @@
                       <div class="tour-row">
                      	 </div>
                      <div class="tour-row">
-                     <p> Name</p>
+                     <p> Tags</p>
                       </div>
                       <div class="tour-row">
-                     <p> Date</p>
+                     <p> Name</p>
                        </div>
                      <div class="tour-row">
-                      <p> Tag</p>
+                      <p> Date </p>
                 </div>
                 </div>
             <button id = "right-button">Add photo</button>
             <div class = "left-column">
 		<div class = "filters">
-		<input type = "date"></input>
-		<input type = "date"></input>
+		<input type =  "date"></input>
+		<input type =  "date"></input>
 		<input placeholder="name"></input>
 		<input placeholder="tag"></input>
 		</div>
         </section>
+        <button id = "button-more">Download more...</button>
         <footer class="main-footer">
             <div class="footer-container main-footer-container">
                             <p class="name">I mage </p>
