--- a/UI/index.html
+++ b/UI/index.html
@@ -41,5 +41,5 @@
     </body>
 <script src = "DOM.js"></script>
 <script src = "func.js"></script>
-<script src = "Controller.js"></script>
+<script src = "Connection.js"></script>
 </html>
